Update to latest models [sc-131503] (#57)
