# src/generated/swagger/configunstable/models/configunstable_filter.go
@@ -1,167 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-	"strconv"
-
-	"github.com/go-openapi/errors"
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// ConfigunstableFilter Filter is the filter configuration for a control rule.
-//
-// swagger:model configunstableFilter
-type ConfigunstableFilter struct {
-
-	// Labels are the key value pairs to specify which logs to control.
-	Labels []*ConfigunstableLabel `json:"labels"`
-
-	// operator
-	Operator FilterOperator `json:"operator,omitempty"`
-}
-
-// Validate validates this configunstable filter
-func (m *ConfigunstableFilter) Validate(formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.validateLabels(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.validateOperator(formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *ConfigunstableFilter) validateLabels(formats strfmt.Registry) error {
-	if swag.IsZero(m.Labels) { // not required
-		return nil
-	}
-
-	for i := 0; i < len(m.Labels); i++ {
-		if swag.IsZero(m.Labels[i]) { // not required
-			continue
-		}
-
-		if m.Labels[i] != nil {
-			if err := m.Labels[i].Validate(formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("labels" + "." + strconv.Itoa(i))
-				} else if ce, ok := err.(*errors.CompositeError); ok {
-					return ce.ValidateName("labels" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-func (m *ConfigunstableFilter) validateOperator(formats strfmt.Registry) error {
-	if swag.IsZero(m.Operator) { // not required
-		return nil
-	}
-
-	if err := m.Operator.Validate(formats); err != nil {
-		if ve, ok := err.(*errors.Validation); ok {
-			return ve.ValidateName("operator")
-		} else if ce, ok := err.(*errors.CompositeError); ok {
-			return ce.ValidateName("operator")
-		}
-		return err
-	}
-
-	return nil
-}
-
-// ContextValidate validate this configunstable filter based on the context it is used
-func (m *ConfigunstableFilter) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	var res []error
-
-	if err := m.contextValidateLabels(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if err := m.contextValidateOperator(ctx, formats); err != nil {
-		res = append(res, err)
-	}
-
-	if len(res) > 0 {
-		return errors.CompositeValidationError(res...)
-	}
-	return nil
-}
-
-func (m *ConfigunstableFilter) contextValidateLabels(ctx context.Context, formats strfmt.Registry) error {
-
-	for i := 0; i < len(m.Labels); i++ {
-
-		if m.Labels[i] != nil {
-
-			if swag.IsZero(m.Labels[i]) { // not required
-				return nil
-			}
-
-			if err := m.Labels[i].ContextValidate(ctx, formats); err != nil {
-				if ve, ok := err.(*errors.Validation); ok {
-					return ve.ValidateName("labels" + "." + strconv.Itoa(i))
-				} else if ce, ok := err.(*errors.CompositeError); ok {
-					return ce.ValidateName("labels" + "." + strconv.Itoa(i))
-				}
-				return err
-			}
-		}
-
-	}
-
-	return nil
-}
-
-func (m *ConfigunstableFilter) contextValidateOperator(ctx context.Context, formats strfmt.Registry) error {
-
-	if swag.IsZero(m.Operator) { // not required
-		return nil
-	}
-
-	if err := m.Operator.ContextValidate(ctx, formats); err != nil {
-		if ve, ok := err.(*errors.Validation); ok {
-			return ve.ValidateName("operator")
-		} else if ce, ok := err.(*errors.CompositeError); ok {
-			return ce.ValidateName("operator")
-		}
-		return err
-	}
-
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *ConfigunstableFilter) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *ConfigunstableFilter) UnmarshalBinary(b []byte) error {
-	var res ConfigunstableFilter
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
