# src/generated/swagger/configunstable/models/log_control_rule_sample.go
@@ -1,0 +1,50 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// LogControlRuleSample Sample is the configuration for the sample logs action.
+//
+// swagger:model LogControlRuleSample
+type LogControlRuleSample struct {
+
+	// Percentage of matching logs to keep. Must be in the range [0, 1].
+	Rate float64 `json:"rate,omitempty"`
+}
+
+// Validate validates this log control rule sample
+func (m *LogControlRuleSample) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this log control rule sample based on context it is used
+func (m *LogControlRuleSample) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *LogControlRuleSample) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *LogControlRuleSample) UnmarshalBinary(b []byte) error {
+	var res LogControlRuleSample
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
