# src/generated/swagger/configunstable/models/rule_de_dupe.go
@@ -1,53 +1,0 @@
-// Code generated by go-swagger; DO NOT EDIT.
-
-package models
-
-// This file was generated by the swagger tool.
-// Editing this file might prove futile when you re-run the swagger generate command
-
-import (
-	"context"
-
-	"github.com/go-openapi/strfmt"
-	"github.com/go-openapi/swag"
-)
-
-// RuleDeDupe DeDupe is the configuration for a dedupe filter.
-//
-// swagger:model RuleDeDupe
-type RuleDeDupe struct {
-
-	// window over which to dedupe
-	WindowSecs int32 `json:"window_secs,omitempty"`
-
-	// key to use for deduplication
-	SelectKey string `json:"select_key,omitempty"`
-}
-
-// Validate validates this rule de dupe
-func (m *RuleDeDupe) Validate(formats strfmt.Registry) error {
-	return nil
-}
-
-// ContextValidate validates this rule de dupe based on context it is used
-func (m *RuleDeDupe) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
-	return nil
-}
-
-// MarshalBinary interface implementation
-func (m *RuleDeDupe) MarshalBinary() ([]byte, error) {
-	if m == nil {
-		return nil, nil
-	}
-	return swag.WriteJSON(m)
-}
-
-// UnmarshalBinary interface implementation
-func (m *RuleDeDupe) UnmarshalBinary(b []byte) error {
-	var res RuleDeDupe
-	if err := swag.ReadJSON(b, &res); err != nil {
-		return err
-	}
-	*m = res
-	return nil
-}
